# Check_Fake_Address

./: pyproject.toml
data/: wa-1.lines.txt  wa-10.lines.txt  wa-11.lines.txt  wa-2.lines.txt  wa-3.lines.txt  wa-4.lines.txt  wa-5.lines.txt  wa-6.lines.txt  wa-7.lines.txt  wa-8.lines.txt  wa-9.lines.txt  wa.as.txt
wallet_checker/: __init__.py  __main__.py  balance.py  cli.py  validate.py
