[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wallet-checker"
version = "0.1.0"
description = "Validate cryptocurrency addresses and fetch on-chain balances"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "eth-utils>=4.0",
    "pycryptodome>=3.19",
    "base58>=2.1",
    "bech32>=1.2",
]

[project.scripts]
wallet-check = "wallet_checker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wallet_checker*"]
